--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title>CarrotsToCarrots</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
+	<%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" %>
+	<%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.6/jquery-ui.min.js" %>
   <%= csrf_meta_tag %>
 </head>
 <body>
