--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,18 @@
 <html>
 <head>
   <title>CarrotsToCarrots</title>
-  <%= stylesheet_link_tag :all %>
+	<%= stylesheet_link_tag :all %>
+	<%= stylesheet_link_tag "jquery-ui-1.8.6.custom.css" %>
+	<%= stylesheet_link_tag "themes/le-frog/jquery-ui-1.8.6.custom.css" %>
 	<%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" %>
 	<%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.6/jquery-ui.min.js" %>
-  <%= csrf_meta_tag %>
+	<%= javascript_include_tag "jquery.dataTables.js" %> 
+	<script type="text/javascript" charset="utf-8"> 
+				$(document).ready(function() {
+					$('#example').dataTable({"bJQueryUI":true});
+				} );
+	</script>
+	<%= csrf_meta_tag %>
 </head>
 <body>
 
